# miraipp-project-template

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
